migrate to  material  design  ortuspos

--- a/app/src/main/res/layout/close_cash_count.xml
+++ b/app/src/main/res/layout/close_cash_count.xml
@@ -71,7 +71,7 @@
     </LinearLayout>
 
     <!-- Keyboard -->
-    <opurex.client.widgets.NumKeyboard
+    <com.opurex.client.widgets.NumKeyboard
         android:id="@+id/numkeyboard"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
