--- a/app/src/main/res/layout/customer_info.xml
+++ b/app/src/main/res/layout/customer_info.xml
@@ -154,7 +154,7 @@
                     android:layout_height="1dp"
                     android:background="@android:color/black"/>
 
-            <opurex.client.widgets.ActionEditText
+            <com.opurex.client.widgets.ActionEditText
                     android:id="@+id/note"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
