--- a/app/src/main/res/layout/numkeyboard_block.xml
+++ b/app/src/main/res/layout/numkeyboard_block.xml
@@ -33,7 +33,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
       android:textSize="18dip"
       android:gravity="right" />
   <!-- Keyboard -->
-  <opurex.client.widgets.NumKeyboard
+  <com.opurex.client.widgets.NumKeyboard
       android:id="@+id/numkeyboard"
       android:layout_width="wrap_content"
       android:layout_height="fill_parent"
