--- a/app/src/main/res/layout-land/close_cash_count.xml
+++ b/app/src/main/res/layout-land/close_cash_count.xml
@@ -65,7 +65,7 @@
             android:textSize="18dip"
             android:gravity="right" />
         <!-- Keyboard -->
-        <opurex.client.widgets.NumKeyboard
+        <com.opurex.client.widgets.NumKeyboard
             android:id="@+id/numkeyboard"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
