--- a/app/src/main/res/layout-land/payments.xml
+++ b/app/src/main/res/layout-land/payments.xml
@@ -105,7 +105,7 @@
                       android:textSize="@dimen/ticket_subtitle" />
             </LinearLayout>
     </LinearLayout>
-    <opurex.client.widgets.NumKeyboard
+    <com.opurex.client.widgets.NumKeyboard
         android:id="@+id/numkeyboard"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
