--- a/app/src/main/res/layout/biometric_setup.xml
+++ b/app/src/main/res/layout/biometric_setup.xml
@@ -1,6 +1,6 @@
-
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -24,8 +24,8 @@
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_fingerprint"
-        android:tint="@color/primary"
-        android:layout_marginBottom="24dp" />
+        android:layout_marginBottom="24dp"
+        app:tint="@color/primary" />
 
     <!-- Status Card -->
     <androidx.cardview.widget.CardView
@@ -101,7 +101,7 @@
 
             </LinearLayout>
 
-            <Switch
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/biometric_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -133,5 +133,11 @@
         android:textColor="@color/text_secondary"
         android:gravity="center"
         android:layout_marginTop="16dp" />
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/ic_fingerprint"
+        app:tint="@color/primary" />
 
 </LinearLayout>
