--- a/app/src/main/res/layout/loading_indicator.xml
+++ b/app/src/main/res/layout/loading_indicator.xml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="utf-8"?>
 <!--
     Opurex Android client
@@ -41,5 +40,11 @@
         android:text="@string/processing"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
+    <TextView
+        android:id="@+id/progress_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/progress" />
+
 
 </LinearLayout>
