--- a/app/src/main/res/layout/open_cash.xml
+++ b/app/src/main/res/layout/open_cash.xml
@@ -56,7 +56,7 @@
        android:gravity="right" />
 
     <!-- Keyboard -->
-    <opurex.client.widgets.NumKeyboard
+    <com.opurex.client.widgets.NumKeyboard
         android:id="@+id/numkeyboard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
