--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -22,7 +22,7 @@
     android:layout_height="wrap_content"
     android:padding="1dp">
 
-    <opurex.client.widgets.ItemImage
+    <com.opurex.client.widgets.ItemImage
         android:id="@+id/product_icon"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bigBtnHeight"
