--- a/app/src/main/res/layout/ticket_item_line.xml
+++ b/app/src/main/res/layout/ticket_item_line.xml
@@ -28,7 +28,7 @@
     android:focusable="true"
     android:foreground="@drawable/btn_ripple_effect">
 
-    <opurex.client.widgets.ItemImage
+    <com.opurex.client.widgets.ItemImage
         android:id="@+id/product_img"
         android:layout_width="@dimen/ticketLineHeight"
         android:layout_height="@dimen/ticketLineHeight"
