--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,7 +1,6 @@
-
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="POSTechTheme" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="POSTechTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
